[tool.poetry]
name = "raylib-py-flat"
version = "3.7.0"
description = "Brings all of raylibpy into a single import"
authors = ["Adam Griffiths <adam.lw.griffiths@gmail.com>"]
license = "BSD 3-Clause"

[tool.poetry.dependencies]
python = ">=3.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
