[metadata]
name = raylib-py-flat
version = attr: raylib.__version__
description = Bring all of raylibpy into a single import
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
license = BSD 3-Clause License

author = Adam Griffiths
author_email = adam.lw.griffiths@gmail.com
url = https://github.com/adamlwgriffiths/raylibpy-flat/
classifiers=
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Multimedia :: Graphics
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = raylib
python_requires = >=3.4
# commented out until raylibpy 3.7 is mainlined
#install_requires =
#    raylib-py
